--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </script>
         michalosman
       </p>
-      <a href="https://github.com/michalosman" target="_blank">
+      <a href="https://github.com/mvomiero" target="_blank">
         <i class="fab fa-github"></i>
       </a>
     </footer>
